# M-Claude

./: .gitignore  .gitleaks.toml  .gitleaksignore  CHAT_LOG.md  CHRONOLOGICAL_TRANSCRIPT.md  HOMELAB-DEPLOYMENT-README.md  README.md  SECURITY.md  claude_code_chat_history_export.md  home-assistant-deployment-comparison.md  homeassistant-recorder-config.yaml  media-stack-docker-compose.yml  mosquitto.conf  nessus-deployment-guide.md  requirements.txt  setup-homeassistant.sh  zimaboard-resource-allocation-guide.md
.claude/: settings.local.json
.github/: dependabot.yml
Archives/: 0a8fc187-681a-4c42-9538-ba0f628ee289.jsonl  0eda269a-9c44-481b-958d-23a3c6361259.jsonl  10864eef-43f7-4a26-8c95-614598473bde.jsonl  1249ff48-75ab-42c9-b229-978e17b10c58.jsonl  158178e0-c02f-4249-a398-ca2edeea8562.jsonl  18240050-3ee8-41cd-a89a-0a5c4b709607.jsonl  1bb8e198-4420-4cce-9667-f3dfd48788f9.jsonl  1c7cbf4e-801e-42e5-afad-7d571647725d.jsonl  1ff3b1f4-aca7-440e-8faf-06d54b235f74.jsonl  21037e11-89de-484d-abba-8705254aa991.jsonl  21e3c711-a412-4fe7-96ba-6f14004e1006.jsonl  2599cb3e-2abc-42b1-a97c-df8e32ae3844.jsonl  343e3472-b9b6-4561-ade0-21d1a4730c11.jsonl  3771a5c5-47e1-4ff0-84c4-80be186da1b7.jsonl  3af9b1a7-6512-4883-ad18-320658ced099.jsonl  3bd9cf18-3c9b-42f5-8fd1-47f5456c1fec.jsonl  3cfce0ff-0725-47be-a572-f8af8122b71e.jsonl  3ec79c8a-9e58-4656-b047-54b28d79cca2.jsonl  412e2513-f75c-45c2-a4e6-9fa22e0dbad5.jsonl  43391f62-680a-4688-9dd8-3637467d6b23.jsonl  43bc3167-00a3-440e-afdf-c6c2575ef92c.jsonl  554b9fa6-f719-40e8-ba70-beee69bd60b5.jsonl  57bb5674-54b1-4ce6-9157-2d341cd9bfc1.jsonl  621cc355-460a-48af-8722-af105fc5d65e.jsonl  72dfed17-b6d2-4a14-8d86-760fef6c7d12.jsonl  7c55c8a2-5df4-4bdf-bf23-104315eb04c2.jsonl  7fcdbdcd-c55c-4463-b1d1-3a8d85864ad0.jsonl  8914a511-2982-4b5b-886b-cb526da278b1.jsonl  8d471a2e-e373-408e-aaf4-81e16e07898c.jsonl  91b751c5-d980-47ef-bfae-1daff58e4470.jsonl  93a38075-1e1b-4210-978f-8e927e43b55b.jsonl  95f81cf4-2300-4739-9018-2d0ff510912a.jsonl  9be1d737-c769-4d5e-b69d-3e0f4f13a1ce.jsonl  abc757d1-3da3-42fb-bb7b-ffa293a4ba29.jsonl  ae81c05d-429b-467f-91bf-c436943fd8ba.jsonl  agent-a00ad96.jsonl  agent-a17266e.jsonl  agent-a3b7f65.jsonl  agent-a598b56.jsonl  agent-a5c3259.jsonl  (+22 more)
CHAT_LOGS/: 02e01366-c7d5-42cd-9c58-3df865c55a25.jsonl  0a8fc187-681a-4c42-9538-ba0f628ee289.jsonl  0d510331-7c2a-45ab-850a-088f3499b4cc.jsonl  1364a361-cf7b-42ad-9665-c141e0c92686.jsonl  167f4a1c-de2a-499f-b462-4a20c8eae49d.jsonl  1f83b279-86ee-496f-9e66-01feb6953592.jsonl  2599cb3e-2abc-42b1-a97c-df8e32ae3844.jsonl  412e2513-f75c-45c2-a4e6-9fa22e0dbad5.jsonl  47b5c569-b6e8-433a-9b7e-63e2cd0c7c8f.jsonl  5e9ff19a-b9e3-4591-8b29-a51be4c770af.jsonl  7bb30364-b7bd-4161-8e01-deaf16c972b5.jsonl  7f0b0e47-d140-4dd9-b4ff-dd9ebf69a6c7.jsonl  7fcdbdcd-c55c-4463-b1d1-3a8d85864ad0.jsonl  89f60a57-aee4-4733-b100-40ebde9642d3.jsonl  8c3b5351-cb5f-4ca6-8d86-9eae3634c81e.jsonl  97b0ffde-ece9-4977-91cb-5c8cdeabdf3f.jsonl  README.md  a13943fd-13e4-4103-86fd-53376fc7eb58.jsonl  ab454957-7a00-4f51-bbef-edab48892c60.jsonl  ac086a83-e3e7-4ad2-9265-4b3c2f437b4a.jsonl  agent-01d23e41.jsonl  agent-1bf70850.jsonl  (+46 more)
CHAT_LOGS-markdown/: 0546d079-7be7-4641-afbe-8dc55d809ebc.md  1364a361-cf7b-42ad-9665-c141e0c92686.md  187e63fb-1e58-43d2-a2d6-d0aeeb7a81d0.md  1aa24ffe-4ef1-4343-baf0-0dba1952d2e0.md  89f60a57-aee4-4733-b100-40ebde9642d3.md  README.md  agent-a32b6f9.md  agent-a3a0057.md  agent-a577c7c.md  agent-a59483f.md  agent-a61f70a.md  agent-a675233.md  agent-a688378.md  agent-a6a9965.md  agent-a760a4d.md  agent-a7fec9a.md  agent-a85ddf9.md  agent-a95ad0b.md  agent-aa457b4.md  agent-aae630b.md  agent-ad35390.md  agent-ad583d4.md  agent-ad78171.md  agent-ad9134b.md  agent-af0b4e5.md  b675c665-d678-4c00-9bca-43c772f3b260.md  c6a8246b-1a48-4928-b132-675f5bff0558.md  c7d2069e-c561-4759-8adf-b0745be78c29.md  dc0bc52f-12c1-4e40-9475-c532aadbc553.md  de73bc86-61f0-4c55-98af-c43cf612e3f6.md
Projects/: pyproject.toml  requirements-dev.txt
Projects/Claude-Slate/: CUSTOM_DISPLAY_QUICK_START.md  GL-BE3600_SSH_Session_Report.md  OPTIMIZATION_SUMMARY.md  README.md  SESSION_NOTES.md  collect_device_info.sh  install_custom_display.sh  manual_configuration_guide.md  network_optimization_plan.md  parental_control_removal_log.md
Projects/Claude-Zima/: CUSTOM_DISPLAY_QUICK_START.md  MEDIA-STACK-ARCHITECTURE.md  MEDIA-STACK-QUICK-REFERENCE.md  MEDIA-STACK-SETUP-GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  RESOURCE-ANALYSIS.md  SESSION_NOTES.md  home-assistant-docker-compose.yml  manual_configuration_guide.md  network_optimization_plan.md  proxmox-firewall-rules.sh  proxmox-network-interfaces  router_optimization_script.sh  traffic-mirror-setup.sh
Projects/Proxmox-Setup/: INSTALLATION_PARAMETERS.md  INSTALLATION_TROUBLESHOOTING.md  NETWORK_TROUBLESHOOTING.md  TERMINAL_UI_INSTALLATION.md
Projects/Scripts/: README.md  __init__.py  cli.py  config.py  convert_to_markdown.py  export_full_transcripts.sh  fix_shortcut.ps1  generate_journals.py  generate_stats.py  redact_gitleaks_secrets.py  run_pipeline.py  search.py  sync_raw_logs.py  update_username.sh
Projects/Scripts/db/: __init__.py  connection.py  models.py  schema.py
Projects/Scripts/hooks/: __init__.py  install.py  pre-commit
Projects/Scripts/pipeline/: __init__.py  extractor.py  indexer.py  journal.py  redactor.py  sync.py
Projects/Scripts/secure-boot/: setup_secureboot_refind.sh
Projects/Tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_gitleaks_redaction.py  test_journals.py  test_redaction.py
Projects/knowledge-stack/: .env.template  .gitignore  QUICK-START.md  README.md  backup.sh  docker-compose.yml  restore.sh  setup.sh
Projects/zimaboard-homelab/: MASTER-DEPLOYMENT-GUIDE.md  NETWORK-TOPOLOGY.md  WILDCARD-MODULES.md  dhcp-server-config.sh
(+237 files in other folders)
